<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="8dp"
    tools:context="com.tehblasian.twitterbot.SettingsActivity"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replies"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="i.e. It's YOU'RE, not YOUR!"
                android:id="@+id/reply"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD REPLY"
                android:layout_alignParentRight="true"
                android:id="@+id/add_reply"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_query"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="i.e. your welcome"
                android:id="@+id/search_query"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD SEARCH"
                android:layout_alignParentRight="true"
                android:id="@+id/add_search"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweets_before_sleep"
            android:paddingBottom="4dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:id="@+id/decrement1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="5"
                android:id="@+id/tweets_sleep"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:id="@+id/increment1"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval_time"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:id="@+id/decrement2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="15"
                android:id="@+id/interval_time"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:id="@+id/increment2"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_time"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:id="@+id/decrement3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="30"
                android:id="@+id/sleep_time"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:id="@+id/increment3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_searches"
                    android:id="@+id/view_searches"
                    android:layout_weight="0.85"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_replies"
                    android:id="@+id/view_replies"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"
                android:layout_marginRight="2dp"
                android:id="@+id/save_changes" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>